--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell lunch-break" colspan="1">🍽️</td>
+      <td class="schedule-cell" rowspan="5">A<br>L<br>M<br>O<br>Ç<br>O</td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell">EST<br>S08</td>
-      <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="2">EST<br>S08</td>
       <td class="schedule-cell"></td>
     </tr>
     <tr>
@@ -69,10 +68,8 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell lunch-break">🍽️</td>
-      <td class="schedule-cell" rowspan="4">A<br>L<br>M<br>O<br>Ç<br>O</td>
-      <td class="schedule-cell">RCD I<br>L01</td>
       <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="2">RCD-I<br>L01</td>
       <td class="schedule-cell"></td>
     </tr>
     <tr>
@@ -80,19 +77,18 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell lunch-break">🍽️</td>
+      <td class="schedule-cell"></td>
       <td class="schedule-cell">AMS<br>L03</td>
       <td class="schedule-cell">ASI<br>L03</td>
       <td class="schedule-cell"></td>
     </tr>
     <tr>
-      <th>Quarta</th>
+      <th>Quinta</th>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell lunch-break">🍽️</td>
-      <td class="schedule-cell">PWC<br>L04</td>
       <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="2">PWC<br>L04</td>
       <td class="schedule-cell"></td>
     </tr>
     <tr>
@@ -100,9 +96,8 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell lunch-break">🍽️</td>
-      <td class="schedule-cell">POO<br>L04</td>
       <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="2">POO<br>L04</td>
       <td class="schedule-cell"></td>
     </tr>
   </table>
