--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell" rowspan="5">A<br>L<br>M<br>O<br>Ç<br>O</td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell" colspan="2">EST<br>S08</td>
-      <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="3">EST<br>S08</td>
     </tr>
     <tr>
       <th>Terça</th>
@@ -69,8 +68,7 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell" colspan="2">RCD-I<br>L01</td>
-      <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="3">RCD-I<br>L01</td>
     </tr>
     <tr>
       <th>Quarta</th>
@@ -79,8 +77,7 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell">AMS<br>L03</td>
-      <td class="schedule-cell">ASI<br>L03</td>
-      <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="2">ASI<br>L03</td>
     </tr>
     <tr>
       <th>Quinta</th>
@@ -88,8 +85,7 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell" colspan="2">PWC<br>L04</td>
-      <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="3">PWC<br>L04</td>
     </tr>
     <tr>
       <th>Sexta</th>
@@ -97,8 +93,7 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell" colspan="2">POO<br>L04</td>
-      <td class="schedule-cell"></td>
+      <td class="schedule-cell" colspan="3">POO<br>L04</td>
     </tr>
   </table>
 
