--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
-      <td class="schedule-cell">AMS<br>L03</td>
-      <td class="schedule-cell" colspan="2">ASI<br>L03</td>
+      <td class="schedule-cell equal-width">AMS<br>L03</td>
+      <td class="schedule-cell equal-width">ASI<br>L03</td>
+      <td class="schedule-cell"></td>
     </tr>
     <tr>
       <th>Quinta</th>
