--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <td class="schedule-cell"></td>
       <td class="schedule-cell"></td>
       <td class="schedule-cell equal-width">AMS<br>L03</td>
-      <td class="schedule-cell equal-width">ASI<br>L03</td>
-      <td class="schedule-cell"></td>
+      <td class="schedule-cell equal-width" colspan="2">ASI<br>L03</td>
+
     </tr>
     <tr>
       <th>Quinta</th>
